plugins {
	id 'application'
	id 'java'
	id 'com.github.johnrengelman.shadow' version '7.1.2'
	id "com.diffplug.spotless" version "6.9.0"
}

group = 'io.github.psotle'
version = '1.0.0'
sourceCompatibility = '11'

repositories {
	mavenCentral()
}


dependencies {
	implementation 'org.apache.logging.log4j:log4j-api:2.18.0'
	implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.18.0'
    implementation 'org.apache.logging.log4j:log4j-core:2.18.0'
	implementation 'org.javacord:javacord:3.5.0'  	
	implementation 'org.apache.commons:commons-lang3:3.12.0' 
}

application {
    mainClass = 'io.github.psotle.gatekeeprolediscordbot.Main'
}

spotless {
	java {
		googleJavaFormat()	
	}
} 

tasks.named('test') {
	useJUnitPlatform()
}
